@@ -95,6 +95,8 @@ People/companies who were/are contributing code to cocos2d for iPhone (alphabeti
 		CCLabelTTF with alignment works OK on Mac. patch.
 	* Derek van Vliet (http://http://getsetgames.com/)
 		Added fix to make JPEG images work correctly in iOS4
+	* Dmitriy Vakhania
+		Added Xcode4 File templates
 	* Dominique Bongard:
 		patches for CocosDenshion
 		Scheduler fires Timer the 1st time with dt=0
